# anchor

.cargo/: config.toml
avm/: Cargo.toml
cli/: Cargo.toml
client/: Cargo.toml
client/example/: Cargo.toml
docs/programs/tic-tac-toe/programs/tic-tac-toe/: Cargo.toml
examples/tutorial/basic-0/programs/basic-0/: Cargo.toml
examples/tutorial/basic-1/programs/basic-1/: Cargo.toml
examples/tutorial/basic-2/programs/basic-2/: Cargo.toml
examples/tutorial/basic-3/programs/puppet/: Cargo.toml
examples/tutorial/basic-3/programs/puppet-master/: Cargo.toml
examples/tutorial/basic-4/programs/basic-4/: Cargo.toml
examples/tutorial/basic-5/programs/basic-5/: Cargo.toml
idl/: Cargo.toml
idl/spec/: Cargo.toml
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/program/: Cargo.toml
lang/derive/accounts/: Cargo.toml
lang/derive/serde/: Cargo.toml
lang/derive/space/: Cargo.toml
lang/syn/: Cargo.toml
spl/: Cargo.toml
tests/anchor-cli-account/programs/account-command/: Cargo.toml
tests/anchor-cli-idl/programs/idl-commands-one/: Cargo.toml
tests/anchor-cli-idl/programs/idl-commands-two/: Cargo.toml
tests/auction-house/programs/auction-house/: Cargo.toml
tests/bench/programs/bench/: Cargo.toml
tests/bpf-upgradeable-state/programs/bpf-upgradeable-state/: Cargo.toml
tests/cashiers-check/programs/cashiers-check/: Cargo.toml
tests/cfo/programs/cfo/: Cargo.toml
tests/chat/programs/chat/: Cargo.toml
tests/composite/programs/composite/: Cargo.toml
tests/cpi-returns/programs/callee/: Cargo.toml
tests/cpi-returns/programs/caller/: Cargo.toml
tests/custom-coder/programs/native-system/: Cargo.toml
tests/custom-coder/programs/spl-associated-token/: Cargo.toml
tests/custom-coder/programs/spl-token/: Cargo.toml
tests/custom-discriminator/programs/ambiguous-discriminator/: Cargo.toml
tests/custom-discriminator/programs/custom-discriminator/: Cargo.toml
tests/declare-id/programs/declare-id/: Cargo.toml
tests/declare-program/programs/declare-program/: Cargo.toml
tests/docs/programs/docs/: Cargo.toml
tests/errors/programs/errors/: Cargo.toml
tests/escrow/programs/escrow/: Cargo.toml
tests/events/programs/events/: Cargo.toml
tests/floats/programs/floats/: Cargo.toml
tests/idl/programs/docs/: Cargo.toml
tests/idl/programs/generics/: Cargo.toml
tests/idl/programs/idl/: Cargo.toml
tests/idl/programs/new-idl/: Cargo.toml
tests/idl/programs/relations-derivation/: Cargo.toml
tests/ido-pool/programs/ido-pool/: Cargo.toml
tests/lockup/programs/lockup/: Cargo.toml
tests/lockup/programs/registry/: Cargo.toml
tests/misc/programs/init-if-needed/: Cargo.toml
tests/misc/programs/lamports/: Cargo.toml
tests/misc/programs/misc/: Cargo.toml
tests/misc/programs/misc-optional/: Cargo.toml
tests/misc/programs/overflow-checks/: Cargo.toml
tests/misc/programs/remaining-accounts/: Cargo.toml
tests/misc/programs/shared/: Cargo.toml
tests/multiple-suites-run-single/programs/multiple-suites-run-single/: Cargo.toml
tests/multiple-suites/programs/multiple-suites/: Cargo.toml
tests/multisig/programs/multisig/: Cargo.toml
tests/optional/programs/allow-missing-optionals/: Cargo.toml
tests/optional/programs/optional/: Cargo.toml
tests/pda-derivation/programs/pda-derivation/: Cargo.toml
tests/pyth/programs/pyth/: Cargo.toml
tests/realloc/programs/realloc/: Cargo.toml
tests/relations-derivation/programs/relations-derivation/: Cargo.toml
tests/safety-checks/programs/account-info/: Cargo.toml
tests/safety-checks/programs/ignore-non-accounts/: Cargo.toml
tests/safety-checks/programs/unchecked-account/: Cargo.toml
tests/spl/metadata/programs/metadata/: Cargo.toml
tests/spl/token-extensions/programs/token-extensions/: Cargo.toml
tests/spl/token-proxy/programs/token-proxy/: Cargo.toml
tests/spl/token-wrapper/programs/token-wrapper/: Cargo.toml
tests/spl/transfer-hook/programs/transfer-hook/: Cargo.toml
tests/swap/programs/swap/: Cargo.toml
tests/system-accounts/programs/system-accounts/: Cargo.toml
tests/sysvars/programs/sysvars/: Cargo.toml
tests/tictactoe/programs/tictactoe/: Cargo.toml
tests/typescript/programs/typescript/: Cargo.toml
tests/validator-clone/programs/validator-clone/: Cargo.toml
tests/zero-copy/programs/zero-copy/: Cargo.toml
tests/zero-copy/programs/zero-cpi/: Cargo.toml
