[package]
publish = ["arcium"]
name = "example"
version = "0.1.1"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
edition = "2021"

[workspace]

[features]
async = ["anchor-client/async"]

[dependencies]
anchor-client = { registry = "arcium", path = "../", features = ["debug"] }
basic-2 = { registry = "arcium", path = "../../examples/tutorial/basic-2/programs/basic-2", features = ["no-entrypoint"] }
basic-4 = { registry = "arcium", path = "../../examples/tutorial/basic-4/programs/basic-4", features = ["no-entrypoint"] }
composite = { registry = "arcium", path = "../../tests/composite/programs/composite", features = ["no-entrypoint"] }
optional = { registry = "arcium", path = "../../tests/optional/programs/optional", features = ["no-entrypoint"] }
events = { registry = "arcium", path = "../../tests/events/programs/events", features = ["no-entrypoint"] }
anyhow = "1.0.32"
clap = { version = "4.2.4", features = ["derive"] }
shellexpand = "2.1.0"
solana-sdk = "1.17.3"
tokio = { version = "1", features = ["full"] }
