[package]
name = "example"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
edition = "2021"

[workspace]

[features]
async = ["anchor-client/async"]

[dependencies]
anchor-client = { registry = "arcium", features = ["debug"] }
basic-2 = { registry = "arcium", features = ["no-entrypoint"] }
basic-4 = { registry = "arcium", features = ["no-entrypoint"] }
composite = { registry = "arcium", features = ["no-entrypoint"] }
optional = { registry = "arcium", features = ["no-entrypoint"] }
events = { registry = "arcium", features = ["no-entrypoint"] }
anyhow = "1.0.32"
clap = { version = "4.2.4", features = ["derive"] }
shellexpand = "2.1.0"
solana-sdk = "1.17.3"
tokio = { version = "1", features = ["full"] }
