[package]
publish = ["arcium"]
name = "cfo"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cfo"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test"]
test = []

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang" }
anchor-spl = { registry = "arcium", path = "../../../../spl" }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
swap = { registry = "arcium", path = "../../deps/swap/programs/swap", features = ["cpi"] }
serum_dex = { registry = "arcium", path = "../../deps/openbook-dex/dex", features = ["no-entrypoint"] }
registry = { registry = "arcium", path = "../../deps/stake/programs/registry", features = ["cpi"] }
lockup = { registry = "arcium", path = "../../deps/stake/programs/lockup", features = ["cpi"] }
