[package]
name = "cfo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cfo"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test"]
test = []

[dependencies]
anchor-lang = { path = "../../../../lang" }
anchor-spl = { path = "../../../../spl" }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
swap = { registry = "arcium", features = ["cpi"] }
serum_dex = { registry = "arcium", features = ["no-entrypoint"] }
registry = { registry = "arcium", features = ["cpi"] }
lockup = { registry = "arcium", features = ["cpi"] }
