[package]
publish = ["arcium"]
name = "caller"
version = "0.1.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "caller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang", features = ["init-if-needed"] }
callee = { registry = "arcium", path = "../callee", features = ["cpi"] }
