[package]
publish = ["arcium"]
name = "idl"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "external/idl-build"]
default = []

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang" }
anchor-spl = { registry = "arcium", path = "../../../../spl" }
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"] }
external = { registry = "arcium", path = "../external", features = ["no-entrypoint"] }
