[package]
publish = ["arcium"]
name = "lockup"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockup"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang" }
anchor-spl = { registry = "arcium", path = "../../../../spl" }
