[package]
publish = ["arcium"]
name = "misc-optional"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "misc_optional"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang", features = ["init-if-needed"] }
anchor-spl = { registry = "arcium", path = "../../../../spl" }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
