[package]
publish = ["arcium"]
name = "remaining-accounts"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "remaining_accounts"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang", features = ["init-if-needed"] }
anchor-spl = { registry = "arcium", path = "../../../../spl" }
