[package]
publish = ["arcium"]
name = "zero-cpi"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_cpi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../lang" }
zero-copy = { registry = "arcium", path = "../zero-copy", features = ["cpi"] }
