[package]
publish = ["arcium"]
name = "token-proxy"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_proxy"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { registry = "arcium", path = "../../../../../lang" }
anchor-spl = { registry = "arcium", path = "../../../../../spl" }
